; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_rewind/extr_datapagemap.c_datapagemap_print.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_rewind/extr_datapagemap.c_datapagemap_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"block %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @datapagemap_print(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @datapagemap_iterate(i32* %5)
  store i32* %6, i32** %3, align 8
  br label %7

7:                                                ; preds = %11, %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @datapagemap_next(i32* %8, i32* %4)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %7
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @pg_log_debug(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %7

14:                                               ; preds = %7
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @pg_free(i32* %15)
  ret void
}

declare dso_local i32* @datapagemap_iterate(i32*) #1

declare dso_local i64 @datapagemap_next(i32*, i32*) #1

declare dso_local i32 @pg_log_debug(i8*, i32) #1

declare dso_local i32 @pg_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
